reconfiguração da exec do npm run build

--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,18 @@
                     </execution>
 
                     <execution>
+                        <id>npm install</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <phase>generate-resources</phase>
+
+                        <configuration>
+                            <arguments>install sass</arguments>
+                        </configuration>
+                    </execution>
+
+                    <execution>
                         <id>npm run build</id>
                         <goals>
                             <goal>npm</goal>
