--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.application.name=grer
-spring.datasource.url=jdbc:mysql://localhost:3306/gremiorupestre
-spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://i5x1cqhq5xbqtv00.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/k0xtqgxqhalzmysz
+spring.datasource.username=k0oj2camxwrcdpvq
+spring.datasource.password=m0ky25so0y4yqdcy
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # npm build
 spring.mvc.static-path-pattern=/static/**
