--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.thymeleaf.encoding=UTF-8
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size = 5MB
 spring.servlet.multipart.max-request-size = 5MB
+
+# Extras
+server.port=443
+server.ssl.enabled=true
