--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url=jdbc:mysql://i5x1cqhq5xbqtv00.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/k0xtqgxqhalzmysz
-spring.datasource.username=k0oj2camxwrcdpvq
-spring.datasource.password=m0ky25so0y4yqdcy
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.datasource.hikari.maximumPoolSize=10
+spring.datasource.hikari.maximumPoolSize=5
 
 # npm build
 spring.mvc.static-path-pattern=/static/**
@@ -22,7 +22,3 @@ spring.thymeleaf.encoding=UTF-8
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size = 5MB
 spring.servlet.multipart.max-request-size = 5MB
-
-# Extras
-server.port=443
-server.ssl.enabled=true
