--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,9 +25,9 @@ spring.servlet.multipart.max-request-size = 5MB
 
 # Mail
 spring.mail.host=smtp.gmail.com
-spring.mail.port=465
-spring.mail.username=carlosantunes.dev@gmail.com
-spring.mail.password=dev.2407@google
+spring.mail.port=587
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
