correção do bucket

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,4 +35,4 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 # Firebase
 firebase.private.key=classpath:google-services.json
-bucket.name=jornal-if-61544.appspot.com
+bucket.name=${BUCKET_NAME}
