--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
-
 # Firebase
+bucket.name=jornal-if-61544.appspot.com
 firebase.private.key=classpath:google-services.json
-bucket.name=${BUCKET_NAME}
