--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+#spring.datasource.url=${SPRING_DATASOURCE_URL}
+#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:mysql://i5x1cqhq5xbqtv00.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/k0xtqgxqhalzmysz
+spring.datasource.username=k0oj2camxwrcdpvq
+spring.datasource.password=x0ajw9siwc7anorm
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -26,12 +29,15 @@ spring.servlet.multipart.max-request-size = 5MB
 # Mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${EMAIL_USERNAME}
-spring.mail.password=${EMAIL_PASSWORD}
+#spring.mail.username=${EMAIL_USERNAME}
+#spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.username=carlosantunes.dev@gmail.com
+spring.mail.password=xvqn iqiy uqau oxno
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
 # Firebase
 bucket.name=jornal-if-61544.appspot.com
-firebase.private.key=classpath:google-services.json
+firebase.private.key=classpath:firebase.json
