--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
-#spring.datasource.url=${SPRING_DATASOURCE_URL}
-#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.url=jdbc:mysql://localhost:3306/journal-if?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-#spring.datasource.password=p7yunigtre02t4jv
+spring.datasource.url=${JAWSDB_URL}
+spring.datasource.username=${JAWSDB_USERNAME}
+spring.datasource.password=${JAWSDB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -29,18 +26,16 @@ spring.servlet.multipart.max-request-size = 5MB
 # Mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-#spring.mail.username=${EMAIL_USERNAME}
-#spring.mail.password=${EMAIL_PASSWORD}
-spring.mail.username=carlosantunes.dev@gmail.com
-spring.mail.password=xvqn iqiy uqau oxno
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 # Firebase
-bucket.name=jornal-if-61544.appspot.com
-firebase.private.key=classpath:firebase.json
+bucket.name=${BUCKET_NAME}
+firebase.private.key=${FIREBASE_PRIVATE_KEY}
 
 # DevTools
 spring.devtools.livereload.enabled=true
