alterações no app.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.datasource.url=${JAWSDB_URL}
+spring.datasource.url=jdbc:${JAWSDB_URL}
 spring.datasource.username=${JAWSDB_USERNAME}
 spring.datasource.password=${JAWSDB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.datasource.hikari.maximumPoolSize=5
+spring.datasource.hikari.maximumPoolSize=1000
+server.port=${PORT:8080}
 
 # npm build
 spring.mvc.static-path-pattern=/static/**
