--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "webpack serve --mode development"
   },
   "dependencies": {
+    "chart.js": "^4.4.3",
     "sass": "^1.77.6"
   },
   "devDependencies": {
