--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,12 @@
             <artifactId>spring-boot-devtools</artifactId>
             <version>3.3.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.commonmark/commonmark -->
+        <dependency>
+            <groupId>org.commonmark</groupId>
+            <artifactId>commonmark</artifactId>
+            <version>0.22.0</version>
+        </dependency>
 
     </dependencies>
 
